<?xml version="1.0"?>
<package>
  <name>liang_tf</name>
  <version>0.0.0</version>
  <description>The package is the tf transfer</description>

  <maintainer email="liang.lu@iit.it">Liang Lu</maintainer>
  <license>IIT 0.0</license>  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cartesian_interface</build_depend>
  <build_depend>ufomap</build_depend>
  <build_depend>ufomap_msgs</build_depend>
  <build_depend>ufomap_ros</build_depend>

  <run_depend>ufomap_msgs</run_depend>
  <run_depend>ufomap_ros</run_depend>
  <run_depend>ufomap</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cartesian_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
